--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,9 @@ jobs:
             ckan-image: "2.10-py3.10"
             solr-image: "2.10-solr8"
             experimental: false
+          - ckan-version: "2.11"
+            ckan-image: "2.11-py3.10"
+            experimental: false
       fail-fast: false
 
     runs-on: ubuntu-22.04
