--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
             experimental: false
           - ckan-version: "2.11"
             ckan-image: "2.11-py3.10"
+            solr-image: "2.11-solr8"            
             experimental: false
       fail-fast: false
 
